--- a/nfttax/index.html
+++ b/nfttax/index.html
@@ -7,7 +7,7 @@
     <title>NFT Tax</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root"><!--app-html--></div>
+    <script type="module" src="/src/client.main.jsx"></script>
   </body>
 </html>
